<resources>
    <string name="pref_hide_google_search_bar_title">Hide</string>
    <string name="pref_autohide_google_search_bar_title">Auto hide</string>
    <string name="pref_autohide_google_search_bar_summary">Automatically show on Google Now page</string>
    <string name="pref_hide_icon_label_on_homescreen_title">Hide icon labels</string>
    <string name="pref_grid_size_explain_title">Attention!</string>
    <string name="pref_grid_size_explain_summary">Please keep in mind: Changing the grid size will mess with your icon order. If you lower the grid size some icons may be lost. Increasing the size will bring them back though. Furthermore if the grid size is too high parts of the icons will be cut. Don\'t increase it too much.</string>
    <string name="pref_switch_enable_grid_size_title">Enable</string>
    <string name="pref_switch_enable_grid_size_summary">Enable changes to the grid size</string>
    <string name="pref_resize_all_widgets_title">Resize widgets</string>
    <string name="pref_resize_all_widgets_summary">Make all widgets resizeable</string>
    <string name="pref_xcount_title">Homescreen columns</string>
    <string name="pref_xcount_summary">Change the column count of icons on the homescreen</string>
    <string name="pref_ycount_title">Homescreen rows</string>
    <string name="pref_ycount_summary">Change the row count of icons on the homescreen</string>
    <string name="pref_title_longpress_app_drawer_button">All apps button</string>
    <string name="pref_summary_longpress_app_drawer_button">Open XGELS on long press</string>
    <string name="pref_switch_appicons_title">Enable</string>
    <string name="pref_switch_appicons_explain_summary">Enable changes to icons</string>
    <string name="pref_iconsize_title">Icon size</string>
    <string name="pref_iconsize_summary">Select a percentage</string>
    <string name="pref_icontextsize_title">Icon text size</string>
    <string name="pref_icontextsize_summary">Select a percentage</string>
    <string name="pref_appdockiconsize_title">Dock icon size</string>
    <string name="pref_appdockiconsize_summary">Select a percentage</string>
    <string name="pref_appdock_count_title">Dock icon count</string>
    <string name="pref_appdock_count_summary">Change the app dock icon count</string>
    <string name="pref_cat_eximport_settings">Import/Export XGELS Settings</string>
    <string name="pref_settings_import_title">Import</string>
    <string name="pref_settings_import_summary">Import your settings from\n/sdcard/XposedGELSettings</string>
    <string name="pref_settings_export_title">Export</string>
    <string name="pref_settings_export_summary">Export your settings to\n/sdcard/XposedGELSettings</string>
    <string name="pref_settings_reset_title">Reset</string>
    <string name="pref_settings_reset_summary">Reset your settings</string>
    <string name="pref_pageindicator_title">Page indicator</string>
    <string name="pref_pageindicator_summary">Hide the page indicator from the homescreen and app drawer</string>
    <string name="pref_default_homescreen_title">Default homescreen</string>
    <string name="pref_default_homescreen_summary">Select the default homescreen</string>
    <string name="pref_enable_rotation_title">Rotation</string>
    <string name="pref_enable_rotation_summary">Enable rotation\n(Requires a full reboot)</string>
    <string name="pref_icon_label_color">Text color</string>
    <string name="pref_switch_icon_shadow_title">Text shadow</string>
    <string name="pref_disable_wallpaper_scroll_title">Wallpaper scrolling</string>
    <string name="pref_disable_wallpaper_scroll_summary">Disable synchronized wallpaper scrolling</string>
    <string name="pref_switch_appdock_title">Hide dock</string>
    <string name="pref_switch_appdock_summary">Hide the dock</string>
    <string name="pref_lock_desktop_title">Lock desktop</string>
    <string name="pref_lock_desktop_summary">Prevent accidental dragging by locking the desktop</string>
    <string name="pref_continuous_scroll_title">Continuous scroll</string>
    <string name="pref_continuous_scroll_summary">Overscroll to first page\n(Experimental)</string>
    <string name="pref_continuous_scroll_with_app_drawer_title">Include app drawer</string>
    <string name="pref_continuous_scroll_with_app_drawer_summary">Includes the app drawer in continuous scroll</string>
    <string name="pref_appdock_background_color_title">Dock background color</string>
    <string name="pref_appdock_background_color_summary">Choose the background color of the app dock overlay</string>
    <string name="pref_switch_no_all_apps_button_title">App drawer button</string>
    <string name="pref_switch_no_all_apps_button_summary">Hide the app drawer button. Please remove the icon from the app drawer if you turn this option off!</string>
    <string name="pref_systemui_explain_title">Note</string>
    <string name="pref_systemui_explain_summary">All of these settings may or may not work depending on your device and/or on the installed ROM. Furthermore all of these settings require a full reboot to take effect.</string>
    <string name="pref_cat_systemui_navbar_title">Navigation bar</string>
    <string name="pref_cat_systemui_statusbar_title">Status bar</string>
    <string name="pref_dynamic_backbutton_title">Back button</string>
    <string name="pref_dynamic_backbutton_summary">Switches to \"Go to sleep\" on default homescreen</string>
    <string name="pref_dynamic_homebutton_title">Home button</string>
    <string name="pref_dynamic_homebutton_summary">Switches to \"Open app drawer\" on default homescreen</string>
    <string name="pref_dynamic_hideclock_title">Hide clock</string>
    <string name="pref_dynamic_hideclock_summary">Hides the clock on default homescreen</string>
    <string name="pref_cat_backuprestore_homescreen_title">Launcher Homescreen Layout</string>
    <string name="pref_backuprestore_note_title">Note</string>
    <string name="pref_backuprestore_note_summary">This only backup/restores your icons and folders. Widgets and their positions will be lost and need to be placed again! This features also require root!</string>
    <string name="pref_backup_homescreen_title">Backup</string>
    <string name="pref_backup_homescreen_summary">Backup your homescreen layout (only icons and folders) to\n/sdcard/XposedGELSettings</string>
    <string name="pref_restore_homescreen_title">Restore</string>
    <string name="pref_restore_homescreen_summary">Restore your homescreen layout (only icons and folders) from\n/sdcard/XposedGELSettings</string>
    <string name="pref_animate_dynamic_homebutton_title">Animate icon switching</string>
    <string name="pref_animate_dynamic_homebutton_summary">Quick fade in animation when changing</string>
    <string name="pref_change_dynamic_homebutton_title">Dynamic home button icon</string>
    <string name="pref_change_dynamic_homebutton_summary">Changes the home icon to an app drawer icon on default homescreen</string>
    <string name="pref_animate_dynamic_backbutton_title">Animate icon switching</string>
    <string name="pref_animate_dynamic_backbutton_summary">Quick fade in animation when changing</string>
    <string name="pref_change_dynamic_backbutton_title">Dynamic back button icon</string>
    <string name="pref_change_dynamic_backbutton_summary">Changes the back icon to a power off icon on default homescreen</string>
    <string name="pref_requires_donation_title">Not available</string>
    <string name="pref_requires_donation_summary">The following features are only available in the Premium version.</string>
    <string name="pref_auto_blur_wallpaper_title">Dynamic background</string>
    <string name="pref_auto_blur_wallpaper_summary">Blur the device wallpaper every time it gets changed and use it as XGELS background. This may drain your battery if you use apps which changed the wallpaper within certain intervals.</string>
    <string name="pref_dynamic_backbuttononeveryscreen_title">Sleep on every screen</string>
    <string name="pref_dynamic_backbuttononeveryscreen_summary">Goes to sleep on every home screen. If this checkbox is not checked, it will only go to sleep on your default home screen.</string>
    <string name="pref_selectwidgetstohide_summary">Select the widgets to hide</string>
    <string name="pref_limited_title">Limited</string>
    <string name="pref_limited_summary">Some of the following features are only available in XGELS Premium.</string>
    <string name="pref_general_scroll_devider_title">Scroll speed</string>
    <string name="pref_general_scroll_devider_summary">Set a global scroll speed</string>
    <string name="pref_icon_chooseiconpack_title">Icon pack</string>
    <string name="pref_icon_premium_title">Premium Feature</string>
    <string name="pref_icon_premium_summary">This feature is only available in XGELS Premium.</string>
    <string name="pref_icon_auto_apply_title">Auto apply</string>
    <string name="pref_icon_auto_apply_summary">Apply new or updated icon packs automatically</string>
    <string name="pref_show_google_search_bar_homescreen_title">Default homescreen</string>
    <string name="pref_show_google_search_bar_homescreen_summary">Show the search bar on default homescreen</string>
    <string name="pref_icon_hide_icon_packs_title">Hide icon packs</string>
    <string name="pref_icon_hide_icon_packs_summary">Automatically hide icon packs from the app drawer</string>
    <string name="pref_icon_perappicon_title">Per app icon change</string>
    <string name="pref_icon_perappicon_summary">Choose icons from different icon packs on a per app basis</string>
    <string name="pref_icon_allappsbutton_title">App drawer button</string>
    <string name="pref_icon_allappsbutton_summary">Change the icon of the app drawer button</string>
    <string name="pref_overlapping_widgets_title">Overlapping widgets</string>
    <string name="pref_overlapping_widgets_summary">Allow widgets overlapping each other. This only works on GNL!\n(Beta: Currently the layer position is not saved over reboot)</string>
    <string name="pref_overridesettings_button_title">Settings button</string>
    <string name="pref_overridesettings_button_summary">Open XGELS instead of Google Now settings</string>
    <string name="pref_enable_l_launcher_title">L Launcher Design</string>
    <string name="pref_enable_l_launcher_summary">This uses the new L launcher theme which is available from Google Search 3.5 on. It doesn\'t theme the navigation bar as this is not part of the launcher.</string>
    <string name="pref_hide_workspace_shadow_title">Homescreen shadow</string>
    <string name="pref_hide_workspace_shadow_summary">Hide the homescreen shadow (visible in immersive mode)</string>
    <string name="pref_glow_color_title">Glow color</string>
    <string name="pref_glow_color_summary">Color when pressing an icon</string>
    <string name="pref_cat_system_bars_title">System bars</string>
    <string name="pref_transparent_system_bars_title">Transparent system bars</string>
    <string name="pref_transparent_system_bars_summary">Use Android L-like transparent system bars (requires ≥ Android 4.4)</string>
    <string name="pref_cat_quicksettings_title">Quick settings tiles</string>
    <string name="pref_cat_quicksettings_lock_desktop_title">Lock desktop tile</string>
    <string name="pref_cat_quicksettings_lock_desktop_summary">Add a tile to the quicksettings allowing to toggle between locked and unlocked desktop quickly</string>
    <string name="pref_quicksettings_explain_summary">Quicksettings are introduced with Android 4.2 and may or may not work along with other Xposed modules or ROM features.</string>
    <string name="pref_contextmenu_mode_title">Context menu mode</string>
    <string name="pref_pageindicator_color_title">Page indicator color</string>
    <string name="pref_pageindicator_color_summary">Choose a page indicator color</string>
</resources>