<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <de.theknut.xposedgelsettings.ui.preferences.MyPreferenceScreen
       	android:key="needsDonate"
	    android:title="@string/pref_requires_donation_title"
	    android:summary="@string/pref_requires_donation_summary"
	    android:selectable="false" />
    <de.theknut.xposedgelsettings.ui.preferences.MyPreferenceCategory
        android:title="@string/pref_cat_backuprestore_homescreen_title">
        <de.theknut.xposedgelsettings.ui.preferences.MyPreferenceScreen
		    android:title="@string/pref_backuprestore_note_title"
		    android:summary="@string/pref_backuprestore_note_summary"
		    android:selectable="false" />
	    <de.theknut.xposedgelsettings.ui.preferences.MyPreferenceScreen
		    android:key="backuphomescreen"
			android:title="@string/pref_backup_homescreen_title"
			android:summary="@string/pref_backup_homescreen_summary" />
		<de.theknut.xposedgelsettings.ui.preferences.MyPreferenceScreen
		    android:key="restorehomescreen"
			android:title="@string/pref_restore_homescreen_title"
			android:summary="@string/pref_restore_homescreen_summary" />
	</de.theknut.xposedgelsettings.ui.preferences.MyPreferenceCategory>
    <de.theknut.xposedgelsettings.ui.preferences.MyPreferenceCategory
        android:title="@string/pref_cat_eximport_settings">
        <de.theknut.xposedgelsettings.ui.preferences.MyPreferenceScreen
            android:key="importsettings"
            android:title="@string/pref_settings_import_title"
            android:summary="@string/pref_settings_import_summary" />
        <de.theknut.xposedgelsettings.ui.preferences.MyPreferenceScreen
            android:key="exportsettings"
            android:title="@string/pref_settings_export_title"
            android:summary="@string/pref_settings_export_summary" />
        <de.theknut.xposedgelsettings.ui.preferences.MyPreferenceScreen
            android:key="resetsettings"
            android:title="@string/pref_settings_reset_title"
            android:summary="@string/pref_settings_reset_summary" />
    </de.theknut.xposedgelsettings.ui.preferences.MyPreferenceCategory>
</PreferenceScreen>