<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <de.theknut.xposedgelsettings.ui.CustomSwitchPreference
        android:key="hidesearchbar"
        android:title="@string/pref_hide_google_search_bar_title" />
    <de.theknut.xposedgelsettings.ui.CustomSwitchPreference
	    android:key="autohidehidesearchbar"
	    android:title="@string/pref_autohide_google_search_bar_title"
	    android:dependency="hidesearchbar"
	    android:summary="@string/pref_autohide_google_search_bar_summary" />
    <de.theknut.xposedgelsettings.ui.CustomSwitchPreference
	    android:key="searchbarondefaulthomescreen"
	    android:dependency="hidesearchbar"
	    android:title="@string/pref_show_google_search_bar_homescreen_title"
	    android:summary="@string/pref_show_google_search_bar_homescreen_summary" />
</PreferenceScreen>